Changed logo service file retrieval